--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					</div>
 					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-							<ul class="nav navbar-nav navbar-right">
+							<ul class="nav navbar-nav navbar-right mynav">
 									<li>
 											<a href="#">Home</a>
 									</li>
@@ -75,13 +75,13 @@
 										<hr class="intro-divider">
 										<ul class="list-inline intro-social-buttons">
 												<li>
-														<a href="https://github.com/hugokallstrom" class="btn btn-default btn-lg fade"><i class="fa fa-download fa-fw"></i> <span class="network-name">Resumé</span></a>
+														<a href="files/resume.pdf" target="_blank" class="btn btn-default btn-lg fade"><i class="fa fa-download fa-fw"></i> <span class="network-name">Resumé</span></a>
 												</li>
 												<li>
-														<a href="https://github.com/hugokallstrom" class="btn btn-default btn-lg fade"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+														<a href="https://github.com/hugokallstrom" target="_blank" class="btn btn-default btn-lg fade"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
 												</li>
 												<li>
-														<a href="https://se.linkedin.com/in/hugokallstrom" class="btn btn-default btn-lg fade"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+														<a href="https://se.linkedin.com/in/hugokallstrom" target="_blank" class="btn btn-default btn-lg fade"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
 												</li>
 										</ul>
 								</div>
